# ormxx

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  Makefile  README.md  WORKSPACE.bazel  gcovr.sh  install_deps.sh  unittest.ci.env  unittest.example.env
.github/workflows/: test.yml  test2.yml  test_coverage.yml
include/ormxx/: ormxx.h
include/ormxx/adaptor/mysql/: mysql_adaptor.h  mysql_config.h  mysql_connection.h  mysql_connection_config.h  mysql_connection_pool.h  mysql_helper.h  mysql_result.h
include/ormxx/interface/: adaptor.h  adaptor_result.h  connection.h  execute_result.h  index.h  result.h  sql_statement.h
include/ormxx/internal/: column_builder.h  create_entrance_field_options.h  create_entrance_schema_options.h  defer.h  field_builder.h  field_to_sql_statement_field_value.h  field_to_string.h  inject_entrance.h  inject_utility.h  macros.h  macros_utility.h  overload.h  query_builder_sql_data.h  query_fields_builder.h  result_to_entity.h  result_to_field.h  schema_options.h  struct_inject_entrance.h  struct_schema_entrance.h  struct_schema_entrance_options.h  utils.h
include/ormxx/options/: field_options.h  field_type.h  index.h  key_options.h  table_options.h
include/ormxx/sql/: generate_create_table_sql.h  generate_delete_sql.h  generate_delete_sql_statement.h  generate_drop_table_sql.h  generate_insert_sql.h  generate_insert_sql_statement.h  generate_select_sql.h  generate_select_sql_statement.h  generate_update_sql.h  generate_update_sql_statement.h  sql_expr.h  sql_string.h  sql_utility.h
include/ormxx/type_traits/: class_member_pointer.h
include/ormxx/types_check/: common.h  has_ormxx_external_get_table_options.h  has_ormxx_external_struct_schema_entrance.h  has_ormxx_get_table_options.h  has_ormxx_inject.h  has_ormxx_struct_schema_entrance.h  has_std_to_string.h  is_field_builder.h  is_specialization.h  is_visit_field_func.h  is_visit_key_func.h
test/: CMakeLists.txt  hello_world_benchmark.cc  hello_world_test.cc
test/ormxx/: get_orm.h  ormxx_fuzz_test.cc  ormxx_test.cc
test/ormxx/adaptor/mysql/: mysql_test.cc
test/ormxx/interface/: sql_string_test.cc
test/ormxx/internal/: field_to_string_test.cc  inject_utility_test.cc  macros_test.cc  macros_utility_test.cc  utils_test.cc
test/ormxx/model/: user.error_schema.h  user.h
test/ormxx/type_traits/: type_traits_test.cc
test/ormxx/types_check/: is_field_builder_test.cc
